# mswinrtvid

./: CMakeLists.txt  IVideoDispatcher.h  IVideoRenderer.h  MSWinRTVideo.vcxproj  MediaEngineNotify.cpp  MediaEngineNotify.h  MediaStreamSource.cpp  MediaStreamSource.h  README  RemoteHandle.cpp  RemoteHandle.h  Renderer.cpp  Renderer.h  SchemeHandler.cpp  SchemeHandler.h  ScopeLock.cpp  ScopeLock.h  SharedData.h  SwapChainPanelSource.cpp  SwapChainPanelSource.h  VideoBuffer.h  VideoRenderer.cs  VideoStreamSource.cs  mswinrtcap.cpp  mswinrtcap.h  mswinrtdis.cpp  mswinrtdis.h  mswinrtmediasink.cpp  mswinrtmediasink.h  mswinrtvid.cpp  mswinrtvid.h  mswp8cap.cpp  mswp8cap.h  mswp8cap_reader.cpp  mswp8cap_reader.h  mswp8dis.cpp  mswp8dis.h  mswp8vid.cpp
mswp8cap/: mswp8cap.sln
mswp8cap/mswp8cap/: mswp8cap.vcxproj
mswp8vid/: mswp8vid.sln  mswp8vid.vcxproj
mswp8vid/mswp8vid/: mswp8vid.vcxproj
windows10/libmswinrtvid/: libmswinrtvid.sln  libmswinrtvid.vcxproj
